--- a/package.json
+++ b/package.json
@@ -1,36 +1,16 @@
 {
-  "name": "node-js-sample",
-  "version": "0.1.0",
-  "description": "A sample Node.js app using Express 4",
+  "name": "eksi-me",
+  "version": "1.0.1",
   "main": "index.js",
-  "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
-  },
+  "repository": "git@github.com:eonurk/eksi-me.git",
+  "authors": "EO Karakaslar, FM Akdemir",
+  "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "ejs": "~1.0.0",
-    "express": "^4.0.0",
-    "nodemon": "^2.0.1",
-    "puppeteer": "^2.0.0"
-  },
-  "engines": {
-    "node": "8.12.0",
-    "npm": "6.4.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-sample"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "author": "E Onur Karakaslar",
-  "contributors": [
-    "Furkan Mustafa Akdemir",
-    "Alper Eroglu"
-  ],
-  "license": "MIT"
+    "cheerio": "^1.0.0-rc.3",
+    "ejs": "^3.0.1",
+    "express": "^4.17.1",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
+    "tough-cookie": "^3.0.1"
+  }
 }
